upgrade registration and minus cache